fix: Improve readability of text with higher font-weight

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,7 @@ hr {
 #mid-box p {
     font-size: 120%;
     padding: 15px;
+    font-weight: 800;
 }
 
 .button {
